Fixed minor gap in design

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -42,6 +42,7 @@ header {
 		left: 7.8125%;
 		bottom: 0;
 		width: 84.375%;
+		height: 8.2vw;
 
 		h2 {
 			position: absolute;
@@ -65,6 +66,11 @@ header {
 
 		div.download {
 			width: 100%;
+			height: 100%;
+
+			img {
+				bottom: 0;
+			}
 
 			h2 {
 				line-height: 10vw;
